--- a/index.html
+++ b/index.html
@@ -51,22 +51,6 @@
         .burger-button:active {
             transform: scale(1.1);
         }
-
-        /* Прогрес лінії */
-        .progress-container {
-            width: 100%;
-            height: 10px;
-            background-color: #333;
-            border-radius: 5px;
-            overflow: hidden;
-            margin-top: 10px;
-        }
-        .progress-bar {
-            height: 100%;
-            background-color: blue;
-            width: 100%;
-        }
-
         .nft-container {
             display: none;
             flex-direction: column;
@@ -121,12 +105,6 @@
             outline: none;
             -webkit-tap-highlight-color: transparent;
         }
-        .positive-change {
-            color: green;
-        }
-        .negative-change {
-            color: red;
-        }
         .menu {
             position: fixed;
             bottom: 50px;
@@ -145,8 +123,11 @@
             cursor: pointer;
             outline: none;
         }
-        .menu button:focus {
-            outline: none;
+        .positive-change {
+            color: green;
+        }
+        .negative-change {
+            color: red;
         }
     </style>
 </head>
@@ -157,10 +138,6 @@
     <div id="clickerScreen">
         <div class="counter" id="counter">0</div>
         <button class="burger-button" onclick="incrementCounter()"></button>
-        <div class="progress-container">
-            <div class="progress-bar" id="clickProgress"></div>
-        </div>
-        <p>Залишилось натискань: <span id="clicksRemainingDisplay">1000</span></p>
     </div>
 
     <!-- NFT Screen -->
@@ -192,64 +169,20 @@
     <script>
         let count = localStorage.getItem('counter') ? parseInt(localStorage.getItem('counter')) : 0;
         let nftPrices = [1000, 10000];
-        let clicksRemaining = 1000;
-        const maxClicks = 1000;
-        let hasNFT = [false, false];
-        let purchasePrices = [null, null];
+        let purchasePrices = JSON.parse(localStorage.getItem('purchasePrices')) || [null, null];
+        let hasNFT = JSON.parse(localStorage.getItem('hasNFT')) || [false, false];
 
         function setNickname() {
-            document.getElementById('nickname').innerText = "User Name"; // Замість "User Name" підставляємо ім'я з Telegram
+            document.getElementById('nickname').innerText = "User Name"; // замініть на реальне ім'я користувача
+        }
+
+        function updateCounterDisplay() {
+            document.getElementById('counter').innerText = count;
         }
 
         function incrementCounter() {
-            if (clicksRemaining > 0) {
-                count += 1;
-                clicksRemaining -= 1;
-                updateClickProgress();
-                localStorage.setItem('counter', count);
-            }
-        }
-
-        function updateClickProgress() {
-            document.getElementById('counter').innerText = count;
-            const progressElement = document.getElementById("clickProgress");
-            const clicksRemainingElement = document.getElementById("clicksRemainingDisplay");
-            progressElement.style.width = `${(clicksRemaining / maxClicks) * 100}%`;
-            clicksRemainingElement.innerText = clicksRemaining;
-        }
-
-        setInterval(() => {
-            if (clicksRemaining < maxClicks) {
-                clicksRemaining += 1;
-                updateClickProgress();
-            }
-        }, 1000);
-
-        function updateNFTPrices() {
-            for (let i = 0; i < nftPrices.length; i++) {
-                nftPrices[i] *= Math.random() * (1.1 - 0.9) + 0.9;
-                document.getElementById(`nftPrice${i + 1}`).innerText = nftPrices[i].toFixed(2);
-            }
-        }
-
-        function buyOrSellNFT(nftIndex) {
-            const buyButton = document.getElementById(`buyButton${nftIndex}`);
-            const priceElement = document.getElementById(`nftPrice${nftIndex}`);
-
-            if (!hasNFT[nftIndex - 1]) {
-                if (count >= nftPrices[nftIndex - 1]) {
-                    count -= nftPrices[nftIndex - 1];
-                    hasNFT[nftIndex - 1] = true;
-                    purchasePrices[nftIndex - 1] = nftPrices[nftIndex - 1];
-                    buyButton.innerText = "SELL";
-                    updateClickProgress();
-                }
-            } else {
-                count += nftPrices[nftIndex - 1];
-                hasNFT[nftIndex - 1] = false;
-                buyButton.innerText = "BUY";
-                updateClickProgress();
-            }
+            count += 1;
+            updateCounterDisplay();
             localStorage.setItem('counter', count);
         }
 
@@ -263,9 +196,50 @@
             document.getElementById('nftScreen').style.display = 'flex';
         }
 
+        function updateNFTPrices() {
+            for (let i = 0; i < nftPrices.length; i++) {
+                nftPrices[i] = Math.round(nftPrices[i] * (Math.random() * (1.2 - 0.8) + 0.8));
+                document.getElementById(`nftPrice${i + 1}`).innerText = nftPrices[i];
+                if (hasNFT[i] && purchasePrices[i] !== null) {
+                    let priceDifference = ((nftPrices[i] - purchasePrices[i]) / purchasePrices[i]) * 100;
+                    const priceChangeElement = document.getElementById(`priceChange${i + 1}`);
+                    priceChangeElement.innerText = `${priceDifference > 0 ? '+' : ''}${priceDifference.toFixed(2)}%`;
+                    priceChangeElement.className = priceDifference >= 0 ? 'price-change positive-change' : 'price-change negative-change';
+                }
+            }
+        }
+
+        function buyOrSellNFT(nftIndex) {
+            const buyButton = document.getElementById(`buyButton${nftIndex}`);
+
+            if (!hasNFT[nftIndex - 1]) {
+                if (count >= nftPrices[nftIndex - 1]) {
+                    count -= nftPrices[nftIndex - 1];
+                    purchasePrices[nftIndex - 1] = nftPrices[nftIndex - 1];
+                    hasNFT[nftIndex - 1] = true;
+                    buyButton.innerText = 'SELL';
+                    document.getElementById(`priceChange${nftIndex}`).innerText = '';
+                    updateCounterDisplay();
+                    localStorage.setItem('counter', count);
+                    localStorage.setItem('purchasePrices', JSON.stringify(purchasePrices));
+                    localStorage.setItem('hasNFT', JSON.stringify(hasNFT));
+                } else {
+                    alert("You don't have enough coins!");
+                }
+            } else {
+                count += nftPrices[nftIndex - 1];
+                hasNFT[nftIndex - 1] = false;
+                buyButton.innerText = 'BUY';
+                updateCounterDisplay();
+                localStorage.setItem('counter', count);
+                localStorage.setItem('purchasePrices', JSON.stringify(purchasePrices));
+                localStorage.setItem('hasNFT', JSON.stringify(hasNFT));
+            }
+        }
+
         setNickname();
-        updateClickProgress();
-        setInterval(updateNFTPrices, 1000);
+        updateCounterDisplay();
+        setInterval(updateNFTPrices, 1000); // Оновлюємо ціни щосекунди
     </script>
 </body>
 </html>
