--- a/index.html
+++ b/index.html
@@ -5,130 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Telegram Mini App</title>
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-        .nickname {
-            font-size: 20px;
-            margin-top: 20px;
-            text-align: center;
-            color: #FFD700;
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        .counter {
-            font-size: 60px;
-            font-weight: bold;
-            text-align: center;
-            color: white;
-            margin-top: 20px;
-        }
-        .burger-button {
-            width: 250px;
-            height: 250px;
-            background-image: url('https://i.imgur.com/VtVDfFc.png');
-            background-size: cover;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            outline: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            -webkit-tap-highlight-color: transparent;
-            transition: transform 0.1s ease;
-        }
-        .burger-button:active {
-            transform: scale(1.1);
-        }
-        .nft-container {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            width: 100%;
-            height: 100vh;
-            background-color: black;
-            color: white;
-            padding-top: 50px;
-        }
-        .nft-box {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            border: 3px solid #FFD700;
-            border-radius: 15px;
-            padding: 20px;
-            margin-top: 10px;
-        }
-        .nft-image {
-            width: 200px;
-            height: 200px;
-            background-image: url('https://i.imgur.com/VtVDfFc.png');
-            background-size: cover;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-        .nft-info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .nft-price {
-            font-size: 30px;
-            color: #FFD700;
-            margin-bottom: 10px;
-        }
-        .price-change {
-            font-size: 20px;
-            margin-top: 5px;
-        }
-        .buy-button {
-            background-color: #ccff00;
-            color: black;
-            font-size: 20px;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            outline: none;
-            -webkit-tap-highlight-color: transparent;
-        }
-        .menu {
-            position: fixed;
-            bottom: 50px;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-            background-color: #333;
-        }
-        .menu button {
-            flex: 1;
-            background-color: #444;
-            border: none;
-            color: white;
-            font-size: 20px;
-            padding: 15px 0;
-            cursor: pointer;
-            outline: none;
-        }
-        .positive-change {
-            color: green;
-        }
-        .negative-change {
-            color: red;
-        }
+        /* стиль той самий */
     </style>
 </head>
 <body>
@@ -138,6 +15,10 @@
     <div id="clickerScreen">
         <div class="counter" id="counter">0</div>
         <button class="burger-button" onclick="incrementCounter()"></button>
+        <div class="clicks-remaining">
+            <div class="progress-bar" id="progressBar"></div>
+            <div id="clicksRemaining">1000</div>
+        </div>
     </div>
 
     <!-- NFT Screen -->
@@ -171,6 +52,7 @@
         let nftPrices = [1000, 10000];
         let purchasePrices = JSON.parse(localStorage.getItem('purchasePrices')) || [null, null];
         let hasNFT = JSON.parse(localStorage.getItem('hasNFT')) || [false, false];
+        let clicksRemaining = 1000;
 
         function setNickname() {
             document.getElementById('nickname').innerText = "User Name"; // замініть на реальне ім'я користувача
@@ -181,9 +63,19 @@
         }
 
         function incrementCounter() {
-            count += 1;
-            updateCounterDisplay();
-            localStorage.setItem('counter', count);
+            if (clicksRemaining > 0) {
+                count += 1;
+                clicksRemaining -= 1;
+                updateCounterDisplay();
+                updateProgressBar();
+                localStorage.setItem('counter', count);
+            }
+        }
+
+        function updateProgressBar() {
+            const progressBar = document.getElementById('progressBar');
+            progressBar.style.width = (clicksRemaining / 1000) * 100 + '%';
+            document.getElementById('clicksRemaining').innerText = clicksRemaining;
         }
 
         function showClicker() {
@@ -197,16 +89,17 @@
         }
 
         function updateNFTPrices() {
-            for (let i = 0; i < nftPrices.length; i++) {
-                nftPrices[i] = Math.round(nftPrices[i] * (Math.random() * (1.2 - 0.8) + 0.8));
-                document.getElementById(`nftPrice${i + 1}`).innerText = nftPrices[i];
+            const newPriceFactor = (Math.random() * (1.2 - 0.8) + 0.8);
+            nftPrices = nftPrices.map(price => Math.round(price * newPriceFactor));
+            nftPrices.forEach((price, i) => {
+                document.getElementById(`nftPrice${i + 1}`).innerText = price;
                 if (hasNFT[i] && purchasePrices[i] !== null) {
-                    let priceDifference = ((nftPrices[i] - purchasePrices[i]) / purchasePrices[i]) * 100;
+                    let priceDifference = ((price - purchasePrices[i]) / purchasePrices[i]) * 100;
                     const priceChangeElement = document.getElementById(`priceChange${i + 1}`);
                     priceChangeElement.innerText = `${priceDifference > 0 ? '+' : ''}${priceDifference.toFixed(2)}%`;
                     priceChangeElement.className = priceDifference >= 0 ? 'price-change positive-change' : 'price-change negative-change';
                 }
-            }
+            });
         }
 
         function buyOrSellNFT(nftIndex) {
@@ -239,7 +132,12 @@
 
         setNickname();
         updateCounterDisplay();
-        setInterval(updateNFTPrices, 1000); // Оновлюємо ціни щосекунди
+        updateProgressBar();
+        setInterval(() => {
+            clicksRemaining = Math.min(1000, clicksRemaining + 1);
+            updateProgressBar();
+            updateNFTPrices();
+        }, 1000); // Оновлюємо кожну секунду
     </script>
 </body>
 </html>
